Issue #3386684: Fix Layout Builder Modal dialog UI z-index over the overlay after Drupal 10.1.3 and Gin 3.0-rc6

--- a/scss/theme/vlb-enhancements.base.scss
+++ b/scss/theme/vlb-enhancements.base.scss
@@ -515,6 +515,10 @@ body {
     &:not(.ui-dialog-off-canvas) {
       z-index: 100;
     }
+
+    &.ui-front.media-library-widget-modal {
+      z-index: 101;
+    }
   }
 }
 
